[package]
name = "poly"
version = "0.1.0"
authors = ["kilic <kiliconu@itu.edu.tr>"]
edition = "2018"

[dev-dependencies]
rand_xorshift = "0.3"

[dependencies]
subtle = "2.3"
crossbeam-utils = "0.8"
num_cpus = "1.13"
pairing = { path = '../pairing', package = "pairing_bn256", features = []}
ff = "0.10"
group = "0.10"
rand = "0.8"
rand_core = { version = "0.6", default-features = false }
blake2b_simd = "0.5"
